# GVP-Bridge-Desktop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  HANDOVER.md  PROJECT_CONTEXT.md  REFERENCE_ReactAutomation.md  REFERENCE_Selectors.md  SESSION_INIT.md  START_DEV.bat  index.html  package-lock.json  package.json  task.md  vite.config.ts
.agents/: CHANGELOG.md  CO_PILOT_PROTOCOL.md  FLASH_PROMPT_PLAN_040.md  GEMINI_PRO_BRIEF.md  GVP_CORE_CONTEXT.md  HANDOVER.md  NEXT_SESSION_PROMPT.md  metadata.json  timestamp.json
.agents/plans/: PLAN-018 Fix Statsig Capture.md  PLAN-019 Fix Statsig Relative URL Interception.md  PLAN-025.md  PLAN-043-fix.md  PLAN_001_EXTENSION_MVP (2).md  PLAN_003_INTEGRATION_ROBUSTNESS.md  PLAN_007_FRONTEND_ENTRY_FIX.md  PLAN_009_FIX_MODULE_LOADING.md  PLAN_010_FIX_SELECTORS_AND_UI.md  PLAN_011_QUICK_RAW_RETURN_TO_GALLERY.md  PLAN_011a_ESCAPE_KEY_FIX.md  PLAN_011b_DOUBLE_CLICK_FIX.md  (+24 more)
Readme/: Architect-Superassistant.md  GVP_MCP_ARCHITECT_WORKFLOW.md  GVP_MISSION_CONTROL.md  GVP_TECHNICAL_SPEC.md  Gemini-Master-Attempt.md  README.md
api-examples/: UVH-Entry.json  get-payload.json  get-response.json  list-payload.json  list-response.json  new-payload.json  new-response-moderated.json  new-response-sucesss.json
src-desktop/: App.tsx  styles.css
src-extension/: README.md  background.js  content.bundle.js  content.js  manifest.json  selectors.js  ws-client.js
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/New folder/: gallery.db  gallery.db-shm  gallery.db-wal
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+176 files in other folders)
