[package]
name = "gvp-quick"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
parking_lot = "0.12"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12", features = ["blocking", "brotli", "gzip", "deflate"] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
